--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
   <meta charset="utf-8"> 
   <meta content='#000' name='theme-color'/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0, maximum-scale=1"> 
-  <meta property="og:title" content="https://raw.githubusercontent.com/al2500000/fafafafagagagga/refs/heads/main/IMG-20260204-WA0065.jpg"> 
-  <meta property="og:image" content="https://raw.githubusercontent.com/al2500000/fafafafagagagga/refs/heads/main/IMG-20260204-WA0065.jpg"> 
-  <meta property="og:image:type" content="https://raw.githubusercontent.com/al2500000/fafafafagagagga/refs/heads/main/IMG-20260204-WA0065.jpg"> 
+  <meta property="og:title" content=""> 
+  <meta property="og:image" content=""> 
+  <meta property="og:image:type" content=""> 
   <meta name="description"> 
   <meta name="author" content=""> 
   <title>BANK BCA</title> 
